<resources>
    <string name="app_name">AD340Form</string>
    <string name="submit_button">submit</string>
    <string name="return_main">return</string>
    <string name="initials">Chau, Jeffrey 3/19/2022</string>
    <string name="first_name">Please Input first name</string>
    <string name="last_name">Please Input last name</string>
    <string name="email">Please Input email</string>
    <string name="birthdate">mm/dd/yyyy</string>
    <string name="null_error">Missing information</string>
    <string name="email_address_error">email not formatted correctly</string>
    <string name="select_your_date_of_birth">Select your Date of Birth</string>
    <string name="eighteen_error">Need to be 18 or older</string>
    <string name="date">%1$d/%2$d/%3$d</string>
    <string name="date_error">date is not formatted correctly</string>
    <string name="valid_date_error">Not a valid date</string>
    <string name="welcome_value">Thanks for Signing Up</string>
</resources>